<resources>
    <string name="app_name">Cultivate</string>
    <string name="activity_contacts_list">Contacts List</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="app_description">Contacts List replacement, enabling analysis of the communication quality.</string>
    <string name="twelve_hour_time_format">HH:mm a</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="date_format">MM-dd-yyyy</string>
    <string name="point_units"> ツ</string>
    <string name="text_sad_face">:-(</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_remove_contact">Remove Contact</string>
    <string name="menu_accept">Accept</string>
    <string name="menu_back">Back</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="search_hint">Find contacts</string>
    <string name="default_group_not_found">Choose a Default Contact Group in the Settings</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="no_data">No Data</string>
    <string name="no_address">No addresses found</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="menu_new_call">Call</string>
    <string name="menu_new_sms">SMS</string>
    <string name="menu_new_email">Email</string>
    <string name="menu_new_event">New Event</string>
    <string name="menu_run_interval_stats">Collect Interval Stats</string>
    <string name="word_cloud_title">Word Cloud</string>
    <string name="stats_title">Details</string>
    <string name="chart_title">History</string>
    <string name="notes_title">Notes</string>
    <string name="all_data">All Time</string>
    <string name="one_month_of_data">1 Month</string>
    <string name="six_months_of_data">6 Months</string>
    <string name="next_version">Maybe Next Version</string>
    <string name="action_bar_overflow_settings">Settings</string>
    <string name="default_sms_body_message">Hey!</string>
    <string name="stats_display_call_count">Call Count</string>
    <string name="stats_display_message_count">Messages</string>
    <string name="stats_display_word_count">Word Count</string>
    <string name="stats_display_word_count_average">Word Count Average</string>
    <string name="stats_display_smiley_count">Smileys</string>
    <string name="stats_display_heart_count">Hearts/Kisses/Hugs</string>
    <string name="stats_display_question_count">Question Marks</string>
    <string name="stats_display_average_reply_time">Average Reply Time</string>
    <string name="stats_display_first_person_word_count">First Person Word Count</string>
    <string name="stats_display_second_person_work_count">Second Person Word Count</string>
    <string name="stats_display_avg_call_duration">Average Call Duration (min)</string>
    <string name="stats_display_accumulated_call_duration">Accumulated Call Duration (min)</string>
    <string name="chart_extra_button">More</string>
    <string name="look_back_title">Look Back</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="search_match_other">Matches Other Field</string>
    <string name="no_intent_found">No application found to handle this action</string>
    <string name="file_import_activity">File Selection</string>
    <string name="file_import_select_xml">Select XML file</string>
    <string name="event_entry_activity">New Event</string>
    <string name="entry_discarded">Entry Discarded</string>
    <string-array name="array_of_duration_value_strings">
        <item>1 Minute</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
        <item>20 Minutes</item>
        <item>30 Minutes</item>
        <item>45 Minutes</item>
        <item>60 Minutes</item>
        <item>1.5 Hours</item>
        <item>2 Hours</item>

    </string-array>
    <string name="duration_prompt">Choose best event duration</string>
    <string name="event_class_prompt">Select Event Class</string>
    <string name="event_class_title">Event Class</string>
    <string name="event_type_title">Event Type</string>
    <string name="event_address_title">Address</string>
    <string name="event_address_title_alt_phone">Phone Number</string>
    <string name="event_address_title_alt_handle">Handle</string>
    <string name="event_duration_title">Duration</string>
    <string name="event_word_count_title">Word Count</string>
    <string name="event_notes_title">Event Notes</string>
    <string name="event_db_entry_clash">Clash with existing DB entry.  Try a different time.</string>
    <string name="notes_editor_activity">Contact Notes Editor</string>
    <string name="preferences_fragment">Preferences</string>
    <string name="contact_status_alert_preference_title"
            >Contact Alert Notifications</string>
    <string name="contact_status_alert_preference_summary"
        >Enable notifications to remind you when you\'ve neglected your friends.</string>
    <string name="update_db_preference_title"
            >Enabel Automatic Updates</string>
    <string name="update_db_preference_summary"
        >Schedule nightly (3AM) update from your data</string>
    <string name="sync_with_local_sources_preference_title"
            >Sync with phone and SMS logs</string>
    <string name="sync_with_local_sources_preference_summary"
        >Gather data from local phone and SMS database?</string>
    <string name="sync_only_with_power_preference_title"
            >Require Power for Database Update</string>
    <string name="sync_only_with_power_preference_summary"
        >Only update the database when device is plugged in with power.</string>
    <string name="sync_with_web_sources_preference_title"
        >Sync with Web</string>
    <string name="sync_with_web_sources_preference_summary"
        >Gather data from web sources?</string>
    <string name="sync_with_internet_sources_frequency_preference_title"
            >Web Access Frequency</string>
    <string name="sync_with_internet_sources_frequency_preference_summary"
        >How often would you like to access web data sources?</string>
    <string-array name="string_array_list_of_web_sync_freq">
        <item>Once per day</item>
        <item>Twice per day</item>
    </string-array>
    <string name="web_access_freq_default"
        >Once per day</string>
    <string name="Facebook_web_sources_preference_title"
            >Access Facebook</string>
    <string name="Facebook_web_sources_preference_summary"
        >Gather communications data from Facebook?</string>
    <string name="Hangouts_web_sources_preference_title"
        >Access Hangouts</string>
    <string name="Hangouts_web_sources_preference_summary"
        >Gather communications data from Hangouts?</string>
    <string name="update_db_at_startup_preference_title"
        >Starts-up Update</string>
    <string name="update_db_at_startup_preference_summary"
        >Update communications data when app starts up?</string>
    <string name="update_db_at_group_contact_list_preference_title"
            >Contacts List Update</string>
    <string name="update_db_at_group_contact_list_preference_Summary"
        >Import event data for group when viewing its contact list?</string>
    <string name="choose_source_group_list_preference_title"
        >Default Contact Group</string>
    <string name="contact_group_preference_default"
            >Starred in Android</string>
    <string-array name="string_array_list_of_contact_groups">
        <item>Starred in Android</item>
        <item>@string/app_name</item>
    </string-array>
    <string-array name="contact_group_data">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
        <string name="choose_first_day_of_week_preference_title"
            >First Day of the Week</string>
    <string name="first_day_of_week_preference_default"
        >2</string>
    <string-array name="string_array_list_of_days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="int_array_list_of_days_of_week">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="animate_detail_chart_preference_title"
            >Detail Chart Animation</string>
    <string name="animate_detail_chart_preference_summary"
                >Enable the animation?</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_footer_text_import">Import Data</string>
    <string name="drawer_footer_text_settings">Settings</string>
    <string name="drawer_footer_text_groups">Edit Groups</string>
    <string-array name="array_of_event_classes">
        <item>Phone</item>
        <item>SMS</item>
        <item>Email</item>
        <item>Meeting</item>
        <item>Facebook</item>
        <item>Google Hangouts</item>
        <item>Skype</item>

    </string-array>
    <string-array name="array_of_group_behaviors">
        <item>Ignored</item>
        <item>Passive</item>
        <item>Random</item>
        <item>Countdown</item>
        <item>Automatic</item>
        <item>Exponential Fall</item>
    </string-array>
    <string name="incoming_title">Incoming</string>
    <string name="outgoing_title">Outgoing</string>
    <string name="missed">Missed</string>
    <string name="draft">Draft</string>
    <string name="incoming_title_alt">Invited</string>
    <string name="outgoing_title_alt">Invite</string>
    <string name="Week">Week</string>
    <string name="Weeks">Weeks</string>
    <string name="Day">Day</string>
    <string name="Days">Days</string>
    <string name="group_starred">Starred in Android</string>
    <string name="group_misses_you">Misses You</string>
    <string name="group_app_name">@string/app_name</string>
    <string name="group_random">Random</string>
    <string name="delims">[ .,?!\-]+</string>
    <string name="contact_detail_chart_activity_label">Chart Activity</string>
    <string name="chart_date_format">MMM \'\'yy</string>
    <string name="Month">Month</string>
    <string name="Year">Year</string>
    <string name="sms">SMS</string>
    <string name="durration">Duration (min)</string>
    <string name="dialog_title_enter_group_name">Enter New Group Name</string>
</resources>